Bug 1538727 - Move TrackListener and track-PrincipalChangeObserver removal to Stop(). r=bryce

These are added in start, and we get into unexpected state if they notify us
after Stop() (when MediaEncoder shuts down and internally removes the tracks
it is encoding) but before Shutdown() when we remove the listeners. This is not
symmetrical. The proper thing to do is to remove these listeners in Stop() as
well.

Depends on D29080

Differential Revision: https://phabricator.services.mozilla.com/D29081